| Summary: | ASTERISK-28697: res_pjsip: Named ACL does not update on reload if changed | ||
| Reporter: | Timothy Vanderaerden (timothyvda) | Labels: | |
| Date Opened: | 2020-01-16 06:49:44.000-0600 | Date Closed: | 2020-02-27 12:53:59.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_acl |
| Versions: | 16.7.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Changes that have been made to ACL are not being applied after you reload ACL or/and PJSIP. This happens when you use a named ACL that is configured in _acl.conf_ and referenced in _pjsip.conf_. The only way to enforce the updated ACL is to either restart Asterisk or by removing the ACL reference from PJSIP then reload PJSIP, add that reference to PJSIP again and finally reload PJSIP again.
*Configuration:* {code:title=acl.conf} [dispatcher-acl] deny=0.0.0.0/0.0.0.0 permit=dispatcherIP {code} {code:title=pjsip.conf} [dispatcher-acl] type=acl acl=dispatcher-acl {code} *Steps to reproduce:* 1. Create named ACL in _acl.conf_. 2. Reference ACL in _pjsip.con_. 3. Reload acl 4. pjsip reload 5. Update named ACL 6. Reload acl 7. pjsip reload _acl show dispatcher-acl_: shows the updated configuration but PJSIP still uses the old ones. You will get the following message: {noformat} Incoming SIP message from {thatIpYouUpdated} did not pass ACL test {noformat} 1. Remove ACL reference from _pjsip.conf_ 2. pjsip reload 3.. Add that ACL reference back to _pjsip.conf_ 4. pjsip reload Now the changes from ACL are applied to PJSIP. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-01-16 06:49:44.914-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-02-27 12:54:00.634-0600 Change 13814 merged by Kevin Harwell: pjsip: Update ACLs on named ACL changes. [https://gerrit.asterisk.org/c/asterisk/+/13814|https://gerrit.asterisk.org/c/asterisk/+/13814] By: Friendly Automation (friendly-automation) 2020-02-27 12:54:22.324-0600 Change 13828 merged by Kevin Harwell: pjsip: Update ACLs on named ACL changes. [https://gerrit.asterisk.org/c/asterisk/+/13828|https://gerrit.asterisk.org/c/asterisk/+/13828] By: Friendly Automation (friendly-automation) 2020-02-27 12:54:44.771-0600 Change 13815 merged by Kevin Harwell: pjsip: Update ACLs on named ACL changes. [https://gerrit.asterisk.org/c/asterisk/+/13815|https://gerrit.asterisk.org/c/asterisk/+/13815] By: Friendly Automation (friendly-automation) 2020-02-27 12:55:02.652-0600 Change 13829 merged by Kevin Harwell: pjsip: Update ACLs on named ACL changes. [https://gerrit.asterisk.org/c/asterisk/+/13829|https://gerrit.asterisk.org/c/asterisk/+/13829] | ||