include/asterisk/sorcery.h
@@ -320,6 +320,9 @@ struct ast_sorcery_wizard {
 			struct ao2_container *objects,
 			const char *prefix,
 			const size_t prefix_len);
+
+	/*! \brief Optional callback for forcing a reload to occur, even if wizard has determined no changes */
+	void (*force_reload)(void *data, const struct ast_sorcery *sorcery, const char *type);
 };
 
 /*! \brief Interface for a sorcery object type observer */
@@ -1068,12 +1071,36 @@ void ast_sorcery_load_object(const struct ast_sorcery *sorcery, const char *type
 void ast_sorcery_reload(const struct ast_sorcery *sorcery);
 
 /*!
+ * \brief Inform any wizards to reload persistent objects, even if no changes determined
+ *
+ * \param sorcery Pointer to a sorcery structure
+ *
+ * \since 13.32.0
+ * \since 16.9.0
+ * \since 17.3.0
+ */
+void ast_sorcery_force_reload(const struct ast_sorcery *sorcery);
+
+/*!
  * \brief Inform any wizards of a specific object type to reload persistent objects
  *
  * \param sorcery Pointer to a sorcery structure
  * \param type Name of the object type to reload
  */
 void ast_sorcery_reload_object(const struct ast_sorcery *sorcery, const char *type);
+
+/*!
+ * \brief Inform any wizards of a specific object type to reload persistent objects
+ *        even if no changes determined
+ *
+ * \param sorcery Pointer to a sorcery structure
+ * \param type Name of the object type to reload
+ *
+ * \since 13.32.0
+ * \since 16.9.0
+ * \since 17.3.0
+ */
+void ast_sorcery_force_reload_object(const struct ast_sorcery *sorcery, const char *type);
 
 /*!
  * \brief Increase the reference count of a sorcery structure
